--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
+    <meta name="google-site-verification" content="GkP72muijRom2WtKcDjEi3xdQZb3MPw5g7l740WoKUA" />
     <meta charset="UTF-8">
     <title>Amigos Sem Noção</title>
     <link rel="stylesheet" href="estilo.css">
